0029859: Coding - GCC compiler warning -Warray-bounds in IntPatch_InterferencePolyhedron.cxx

Code is corrected to avoid copying uninitialized element of the array